[package]
name = "proj_rust"
version = "0.1.0"
authors = ["GH200"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.17.0"
specs-derive = "0.4.1"
rand = "0.8.4"
rayon = "1.5.1"
itertools = "0.10.1"

[dependencies.sdl2]
version = "0.34.5"
default-features = false
features = ["image", "ttf"]